--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Montserrat:wght@100;300;400;700&display=swap" rel="stylesheet"> 
     <link href="style.css" rel="stylesheet"/>
-    <title>Document</title>
+    <title>Semenov Gleb</title>
 </head>
 <body>
     <div class="wrapper">
@@ -17,14 +17,14 @@
             <img src="./img/logo.svg" alt="logo" class="header__logo">
             <nav class="header__nav">
                 <ul class="header__list">
-                    <li class="list__item"><a href="#about" class="list__item-link">ОБО МНЕ</a></li>
-                    <li class="list__item"><a href="#skills" class="list__item-link">НАВЫКИ</a></li>
-                    <li class="list__item"><a href="#contacts" class="list__item-link">КОНТАКТЫ</a></li>
+                    <li class="list__item"><a href="#about" class="list__item-link" id="navAbout">ОБО МНЕ</a></li>
+                    <li class="list__item"><a href="#skills" class="list__item-link" id="navSkills">НАВЫКИ</a></li>
+                    <li class="list__item"><a href="#contacts" class="list__item-link" id="navContacts">КОНТАКТЫ</a></li>
                 </ul>
             </nav>
             <div class="header__lang">
-                <a href="" class="header__lang-link">RU</a>/
-                <a href="" class="header__lang-link">EN</a>
+                <a href="#!" class="header__lang-link" id="ru">RU</a>/
+                <a href="#!" class="header__lang-link" id="en">EN</a>
             </div>
             </div>
         </header>
@@ -38,13 +38,13 @@
                     <h2 class="intro__subtitle intro__subtitle-1">FULLSTACK</h2>
                     <h2 class="intro__subtitle intro__subtitle-2">DEVELOPER</h2>
                 </div>
-                <a href="#!" class="intro__link">СКАЧАТЬ РЕЗЮМЕ</a>
+                <a href="./Семенов Глеб.pdf" class="intro__link" download>СКАЧАТЬ РЕЗЮМЕ</a>
                 <a href="#about" class="down__link"><div class="down"></div></a>
             </div>
         </section>
         <section id="about" class="about-section">
             <h2 class="number number-1">01</h2>
-            <h3 class="section-title">ОБО МНЕ</h3>
+            <h3 class="section-title" id="aboutTitle">ОБО МНЕ</h3>
             <p class="about-section__subtitle">Меня зовут Глеб, я&nbsp;начинающий web разработчик из&nbsp;города Новосибирск.</p>
             <div class="about-section__content">
                 <a href="#skills" class="down__link down__link-intro"><div class="down"></div></a>
@@ -58,7 +58,7 @@
         </section>
         <section id="skills" class="skills-section">
             <h2 class="number number-2">02</h2>
-            <h3 class="section-title">НАВЫКИ</h3>
+            <h3 class="section-title" id="skillsTitle">НАВЫКИ</h3>
             <div class="skills">
                 <div class="skills__item">
                     <img src="./img/skills/html.png" alt="html" class="skills__img">
@@ -97,7 +97,7 @@
         </section>
         <section id="contacts" class="contacts-section">
             <h2 class="number number-3">03</h2>
-            <h3 class="section-title">КОНТАКТЫ</h3>
+            <h3 class="section-title" id="contactsTitle">КОНТАКТЫ</h3>
             <p class="contacts-section__subtitle">Если у&nbsp;вас остались вопросы или есть предложения о&nbsp;сотрудничестве, можете связаться со&nbsp;мной в&nbsp;одном из&nbsp;мессенджеров или по&nbsp;электронной почте.</p>
             <p class="contacts-section__time">Часовой пояс: (UTC/GMT +07:00) </p>
             <ul class="contacts">
