--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Montserrat:wght@100;300;400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Montserrat:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg"/> 
     <link href="style.css" rel="stylesheet"/>
     <title>Semenov Gleb</title>
 </head>
