--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                     <p class="skills__title">JAVASCRIPT</p>
                 </div>
                 <div class="skills__item">
-                    <img src="./img/skills/react.png" alt="react" class="skills__img">
-                    <p class="skills__title">REACT</p>
+                    <img src="./img/skills/laravel.png" alt="laravel" class="skills__img">
+                    <p class="skills__title">LARAVEL</p>
                 </div>
                 <div class="skills__item">
                     <img src="./img/skills/php.png" alt="php" class="skills__img">
                     <p class="skills__title">PHP</p>
                 </div>
                 <div class="skills__item">
-                    <img src="./img/skills/symfony.png" alt="symfony" class="skills__img">
-                    <p class="skills__title">SYMFONY</p>
+                    <img src="./img/skills/bitrix.png" alt="bitrix" class="skills__img">
+                    <p class="skills__title">BITRIX</p>
                 </div>
                 <div class="skills__item">
                     <img src="./img/skills/sql.png" alt="sql" class="skills__img">
